eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometeo-nestjs-hex-boilerplate-api-service
spec:
  selector:
    app: prometeo-nestjs-hex-boilerplate-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
